Refactored MessageService inline SendMessageTask into the MessageFragment. Fixed https response sending on the Android 5. Used deprecated Apache HTTP Utils.